# minimal-cpp-pj

./: .clang-tidy  .travis.yml  CMakeLists.txt  LICENSE  README.md  appveyor.yml
app/: CMakeLists.txt  main.cpp
include/minimalcpppj/: minimalcpppj.h
scripts/: build-unix.sh  initial-setup.sh  run-codecov.sh
src/: CMakeLists.txt  dummy.cpp
tests/: CMakeLists.txt  test_example.cpp
